# DungeonMasterAI

./: .black.toml  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pants.toml  pyproject.toml  pytest.ini
docker/gateway/: BUILD  Dockerfile
dungeonmasterai/: __main__.py
dungeonmasterai/abc/: entities.py  events.py  game.py
dungeonmasterai/abc/systems/: base.py  character.py  combat.py
dungeonmasterai/entities/: character.py
dungeonmasterai/event_bus/: queue.py
dungeonmasterai/game/: game.py
dungeonmasterai/systems/: character.py  combat.py
libs/python/mediators/: BUILD
libs/python/mediators/exceptions/: base.py  mediators.py
libs/python/mediators/handlers/: commands.py  events.py  queries.py
libs/python/mediators/mediators/: base.py  commands.py  events.py  queries.py
libs/python/mediators/registries/: commands.py  events.py  queries.py
services/auth/: BUILD
services/auth/src/: BUILD  pyproject.toml
services/auth/src/api/: main.py
services/auth/src/settings/: logging.py
services/backend/: pyproject.toml
services/backend/migrations/: env.py
services/backend/migrations/versions/: 19a05b42d392_init.py
services/backend/src/: lifespan.py  main.py
services/backend/src/core/: dependencies.py  di.py
services/backend/src/core/config/: settings.py
services/backend/src/core/exceptions/: base.py
services/backend/src/core/infra/broker/: broker.py
services/backend/src/core/infra/database/: base.py  session.py
services/backend/src/player_managment/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
services/gateway/: BUILD  manage.py  pyproject.toml
services/gateway/api/: main.py
services/gateway/application/api/: main.py
services/gateway/domain/entities/: base.py  users.py
services/gateway/domain/events/: base.py  users.py
services/gateway/domain/exceptions/: base.py  users.py
services/gateway/domain/values/: base.py  users.py
services/gateway/infra/exceptions/: base.py
services/gateway/infra/exceptions/repositories/: sqlalchemy.py
services/gateway/infra/repositories/sqlalchemy/: base.py
services/gateway/infra/uow/: base.py  sqlalchemy.py
services/gateway/logic/: __init__.py  base.py  mediator.py
services/gateway/logic/commands/: base.py
services/gateway/logic/commands/empty/: command.py  handler.py
services/gateway/logic/commands/test/: commands.py  handlers.py
services/gateway/logic/events/: base.py
services/gateway/logic/exceptions/: base.py  mediator.py
services/gateway/logic/mediators/: base.py  commands.py  events.py  queries.py
services/gateway/logic/queries/: base.py
services/gateway/logic/registries/: base.py  commands.py  events.py  queries.py
services/gateway/migrations/: env.py
services/gateway/settings/: config.py  const.py  logging.py  logging_config.json
services/gateway/tests/: conftest.py  fixtures.py
services/gateway/tests/domain/entities/: test_users.py
services/gateway/tests/domain/values/: atest_users.py
services/gateway/tests/logic/: test_session.py
