[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey Yakunin",email = "yakunina1111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "punq (>=0.7.0,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "taskiq (>=0.11.17,<0.12.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "taskiq-aio-pika (>=0.4.2,<0.5.0) ; python_version >= \"3.12\" and python_full_version < \"4.0.0\"",
    "taskiq-redis (>=1.0.9,<2.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "taskiq-pipelines (>=0.1.4,<0.2.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.pyright]
executionEnvironments = [
  { root = "." }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
