[tool.poetry]
name = "API Gateway"
version = "0.1.0"
description = ""
authors = ["Aleksey512 <yakunina1111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["all"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
pytest = "^8.3.3"
faker = "^33.0.0"
pytest-asyncio = "^0.24.0"
punq = "^0.7.0"


[tool.pyright]
executionEnvironments = [
  { root = ".." }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
