[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Aleksey512 <yakunina1111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["all"], version = "^0.32.0"}


[tool.pyright]
executionEnvironments = [
  { root = "." }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
